# the-lab-zone-agents

./: .env.tpl  .gitignore  Dockerfile  Justfile  agent.py  mise.toml  pyproject.toml
.github/workflows/: ci.yml  docker-triage-webhook.yml
agents/qa/: agent.py
agents/triage/: agent.py  server.py
agents/triage/prompts/: triage.md
bot/: responder.py  slack.py  slack_message_updater.py
docs/decisions/: 0001-monorepo-servicos-irmaos.md  0002-fronteira-go-python-sidecar.md  0003-borda-go-stdlib-only.md  0004-caps-agente-por-processo.md  0005-ci-unificado-contrato-just.md  0006-compressao-de-historico-in-run.md  0007-persistencia-triagem-garage.md  0008-extracao-conclusoes-adiada.md  0009-memoria-duas-collections.md  0010-indexer-um-codebase-dois-entrypoints.md  0011-job-indexer-dag-pvc-efemero.md  0012-consumo-dois-mcps-filtro-nomeado.md  0013-conclusoes-artefato-garage.md  0014-confirmacao-humana-slack-modal.md  README.md
docs/runbooks/: README.md  recarregar-config-mcp-toolhive.md
services/core/: .env.tpl  Justfile  README.md  pyproject.toml
services/core/agents/qa/: agent.py  main.py
services/core/agents/triage/: agent.py  cli.py  server.py
services/core/agents/triage/prompts/: triage.md
services/core/shared/: config.py  confirmations.py  garage.py  history.py  log.py  metrics.py  observability.py  runtime.py  test_confirmations.py  test_garage.py  test_history.py  test_prompts.py  test_runtime_cap.py
services/core/shared/slack/: app.py  message_updater.py  responder.py  test_triage_feedback.py  triage_feedback.py
services/triage-webhook/: .golangci.yml  Dockerfile  Justfile  README.md  go.mod  go.sum
services/triage-webhook/cmd/triage-webhook/: main.go
services/triage-webhook/internal/alertmanager/: payload.go  payload_test.go
services/triage-webhook/internal/config/: config.go
services/triage-webhook/internal/core/: client.go
services/triage-webhook/internal/dedup/: dedup.go  dedup_test.go
services/triage-webhook/internal/metrics/: metrics.go  metrics_test.go
shared/: config.py  runtime.py
(+11 files in other folders)
